--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
@@ -18,6 +19,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "http://localhost:5001",
   "browserslist": [
     ">0.2%",
     "not dead",
