--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "server": "nodemon server.js",
     "client-install": "npm install --prefix client",
     "client": "npm start --prefix client",
@@ -23,6 +24,5 @@
   },
   "devDependencies": {
     "nodemon": "^1.18.10",
-    "start": "node server.js"
   }
 }
